# pastebin

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: PR_PLAN_pastebin.md  PR_PLAN_url_shortener.md  SCALING.md
pastebin-service/: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
pastebin-service/docs/: ARCHITECTURE.md  CONCURRENCY.md
pastebin-service/scripts/: zk_password_test.mjs
pastebin-service/src/: config.rs  error.rs  lib.rs  main.rs  metrics.rs  views.rs
pastebin-service/src/api/: mod.rs
pastebin-service/src/application/: mod.rs
pastebin-service/src/domain/: mod.rs
pastebin-service/src/infrastructure/: memory.rs  mod.rs  sqlite.rs
pastebin-service/static/: app.js  index.html
pastebin-service/tests/: health.rs  pastes.rs  web.rs
tcp-actor-server/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
tcp-actor-server/scripts/: loadtest.sh
tcp-actor-server/src/: config.rs  error.rs  http.rs  lib.rs  main.rs  metrics.rs  registry.rs  server.rs
tcp-actor-server/tests/: http.rs
url-shortener/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
url-shortener/docs/: CONCURRENCY.md  DESIGN.md  SCALING.md
url-shortener/migrations/: 0001_init.sql  0002_add_expires_at.sql
url-shortener/scripts/: smoke_test.sh
url-shortener/src/: cache.rs  config.rs  lib.rs  main.rs  metrics.rs  rate_limit.rs
url-shortener/src/api/: mod.rs
url-shortener/src/application/: mod.rs
url-shortener/src/domain/: mod.rs
url-shortener/src/infrastructure/: memory.rs  mod.rs  sqlite.rs
url-shortener/tests/: health.rs  links.rs  middleware.rs  rate_limit.rs
