# Virtual workspace: each service stays in its own folder but shares one
# build cache (./target) and one Cargo.lock for consistent dependency versions.
# `pastebin-service` joins this list once it has its own Cargo.toml (its PR #1).
[workspace]
resolver = "2"
members = ["url-shortener", "pastebin-service"]

# Build profiles must live at the workspace root (Cargo ignores them in members).
# Panic strategy is left at the default (unwind) so a panicking handler fails
# only that request; tower-http's CatchPanicLayer also maps panics to 500.
[profile.release]
lto = "thin"
codegen-units = 1
