[package]
name = "pastebin-service"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "A clean, layered pastebin REST API (Axum + SQLite/sqlx)."
license = "MIT"

# Only deps the current code uses are declared; later PRs add their own
# (sqlx in PR #4, serde derive in PR #5, tower/tower-http in PR #6).
[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "test-util"] }
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
