[package]
name = "pastebin-service"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "A clean, layered pastebin REST API (Axum + SQLite/sqlx)."
license = "MIT"

# Only deps the current code uses are declared; later PRs add their own
# (sqlx in PR #4, serde derive in PR #5, tower/tower-http in PR #6).
[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
# Domain (PR #2): object-safe async repository port.
async-trait = "0.1"
# Application (PR #3): random paste-id generation.
rand = "0.8"
# Infrastructure (PR #4): async SQLite via a bounded connection pool.
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
# Hardening (PR #6): middleware stack.
tower = { version = "0.4", features = ["limit"] }
tower-http = { version = "0.5", features = ["trace", "timeout", "catch-panic"] }
# Optional Redis read-cache for the hot fetch path.
redis = { version = "0.27", default-features = false, features = ["tokio-comp", "connection-manager"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "test-util"] }
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"

# Panic strategy is left at the default (unwind) so a panicking handler fails
# only that request; tower-http's CatchPanicLayer also maps panics to 500.
[profile.release]
lto = "thin"
codegen-units = 1
