[package]
name = "url-shortener"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "A clean, layered URL shortener REST API (Axum + SQLite/sqlx)."
license = "MIT"

# Only dependencies actually used by the current code are declared. Later PRs
# add their own: sqlx (PR #4), serde derive (PR #5), tower/tower-http (PR #6).
[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
# Domain (PR #2): robust URL validation + object-safe async repository port.
url = "2"
async-trait = "0.1"
# Application (PR #3): random short-code generation.
rand = "0.8"
# Infrastructure (PR #4): async SQLite via a bounded connection pool.
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
# Hardening (PR #6): middleware stack.
tower = { version = "0.4", features = ["limit"] }                       # ConcurrencyLimitLayer + ServiceBuilder
tower-http = { version = "0.5", features = ["trace", "timeout", "catch-panic"] }
# Optional Redis read-cache for the hot redirect path.
redis = { version = "0.27", default-features = false, features = ["tokio-comp", "connection-manager"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "test-util"] }
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"

# Panic strategy is left at the default (unwind) so a panicking handler fails
# only that request; tower-http's CatchPanicLayer also maps panics to 500.
[profile.release]
lto = "thin"
codegen-units = 1
